# gliner_pii

./: README.md  benchmarks.json  pyproject.toml
tests/: test_validator.py
validator/: __init__.py  main.py  post-install.py
